# parallel_primes_rs

./: .gitignore  Cargo.toml  README.md
benches/: scaling_benchmark.rs
scaling_info/: scaling_plotter.py  scaling_tests.txt
src/: bin.rs  lib.rs  main.rs
