[package]
name = "parallel_primes_rs"
version = "0.1.0"
authors = ["Patrick Crumley <patrick.crumley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "primes_lib"
path = "src/lib.rs"

[[bin]]
name = "primes_cli"
path = "src/bin.rs"

[dependencies]
clap = "2"
rayon = "1.4"
anyhow = "1.0"
